--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
+  width: 100vw;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App > .board-wrapper {
+  display: flex;
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App > .board-wrapper > .board {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.App > .board-wrapper > .reset {
+  margin: 20px 0;
+  width: 300px;
+  height: 50px;
+}
+
+.square {
+  width: 100px;
+  height: 100px;
+  font-size: 36px;
 }
