--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,10 @@
   height: 50px;
 }
 
+.App > .board-wrapper > .scores > span {
+  margin: 20px;
+}
+
 .square {
   width: 100px;
   height: 100px;
